--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -1,3 +1,4 @@
+
 <div class="container">
 
   <div class="row">
@@ -23,3 +24,41 @@
   </div>
 
 </div>
+
+
+<!--
+
+<div class="container">
+  <div class="row">
+    <div class="Absolute-Center is-Responsive">
+      <div class="col-sm-12 col-md-10 col-md-offset-1">
+      <div id="logo-container"></div>
+      <h1 class="form-signin-heading">Sign in</h1>
+      <p class="lead">Not a member? Please <a routerLink="/register">register</a> instead.</p>
+      <alert></alert>
+        <form action="" id="loginForm" (submit)="login()">
+          <div class="form-group input-group">
+            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+            <input class="form-control" type="text" name='username' placeholder="email" [(ngModel)]="credentials.email" />          
+          </div>
+          <div class="form-group input-group">
+            <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+            <input class="form-control" type="password" name='password' placeholder="password" [(ngModel)]="credentials.password"/>     
+          </div>
+          <div class="checkbox">
+            <label>
+              <input type="checkbox"> I agree to the <a href="#">Terms and Conditions</a>
+            </label>
+          </div>
+          <div class="form-group">
+            <button type="submit" class="btn btn-def btn-block">Login</button>
+          </div>
+          <div class="form-group text-center">
+            <a href="#">Forgot Password</a>&nbsp;|&nbsp;<a href="#">Support</a>
+          </div>
+        </form>        
+      </div>  
+    </div>    
+  </div>
+</div>
+-->
